<resources>
    <string name="app_name" translatable="false">Been Love Memory</string>
    <string name="txt_diary">Diary\t</string>
    <string name="txt_setting">Settings</string>
    <string name="txt_home">Home</string>
    <string name="txt_dating">Dating</string>
    <string name="txt_day">Date</string>
    <string name="txt_nick_name_1">Nickname 1</string>
    <string name="txt_nick_name_2">Nickname 2</string>
    <string name="txt_bow">Zodiac</string>
    <string name="txt_menu">Feature List</string>
    <string name="txt_edit_status_top">Edit above title</string>
    <string name="txt_edit_status_bottom">Edit bottom title</string>
    <string name="txt_edit_wave">Change wave shape</string>
    <string name="txt_edit_wave_color">Change wave color</string>
    <string name="txt_edit_date_love">Change date of love</string>
    <string name="txt_edit_wallpaper">Change main wallpaper</string>
    <string name="txt_edit_capture">Capture screen</string>
    <string name="txt_allow">Agree</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_edit">Edit</string>
    <string name="txt_edit_name">Change name</string>

    <string name="province_defau">Virgo</string>
    <string name="bachduong">Aries</string>
    <string name="kimnguu">Taurus</string>
    <string name="songtu">Gemini</string>
    <string name="cugiai">Cancer</string>
    <string name="sutu">Lion</string>
    <string name="xunu">Virgo</string>
    <string name="thienbinh">Libra</string>
    <string name="bocap">Scorpion</string>
    <string name="nhanma">Sagittarius</string>
    <string name="maket">Capricorn</string>
    <string name="baobinh">Aquarius</string>
    <string name="songngu">Pisces</string>

    <string name="txt_calendar">Calendar</string>
    <string name="txt_year">Year</string>
    <string name="txt_month">Month</string>
    <string name="txt_select_color">Choose a color</string>
    <string name="txt_edit_birthday">Change birthday</string>
    <string name="txt_edit_birthday_bg">Change background color</string>
    <string name="txt_edit_sex">Change gender</string>
    <string name="txt_error">An error occurred</string>
    <string name="txt_edit_face">Change avatar</string>
    <string name="txt_edit_face_frame">Change picture frame</string>
    <string name="txt_status_love">The best and most beautiful things in this world cannot be seen or even heard, but must be felt with the heart</string>
    <string name="txt_week">Week</string>
    <string name="txt_send">Send</string>
    <string name="txt_love_forever">Love Forever</string>
    <string name="txt_message_clock">We fell in love</string>
    <string name="txt_hours">hours</string>
    <string name="txt_minute">minute</string>
    <string name="txt_second">second</string>
    <string name="txt_edit_letter">Edit love letters</string>
    <string name="txt_rotate_letter">Change sender/receiver location</string>
    <string name="txt_lock">App Lock</string>
    <string name="txt_calculate_one">Count from day 1</string>
    <string name="txt_bow_all">12 Zodiacs</string>
    <string name="txt_notification">Show notification bar</string>
    <string name="txt_rate">App review</string>
    <string name="txt_feedback">Feedback</string>
    <string name="txt_policy">Terms</string>
    <string name="txt_crop_photo">Crop image</string>
    <string name="txt_select_photo">Select an image</string>
    <string name="txt_waring_permission">Access warning</string>
    <string name="txt_grant_permission">Been Love Memory needs Read permission &amp; Record device memory for image management.</string>
    <string name="txt_permission">Permissions</string>
    <string name="txt_diary_love">Love Memories</string>
    <string name="txt_date_diary">Select a date(Can not be blank)</string>
    <string name="txt_hint_content_diary">Enter the content of your love memory…</string>
    <string name="txt_save">Save</string>
    <string name="txt_content">Please fill out the content completely</string>
    <string name="txt_create_success">Create success</string>
    <string name="txt_edit_diary">Edit</string>
    <string name="txt_delete_diary">Delete</string>
    <string name="txt_delete_success">Delete successful</string>
    <string name="txt_feature_warring">Feature will be updated soon</string>
    <string name="txt_shareapp">Share</string>
    <string name="txt_feedback_user">User Feedback</string>

    <string name="txt_load">Loading…</string>
    <string name="txt_set_up_lock">Set up lock</string>
    <string name="txt_pass_set_again">Reset Password</string>
    <string name="txt_pass_draw">Pattern lock</string>
    <string name="txt_pass_pin">Pin lock</string>
    <string name="txt_message_draw">Draw pattern to unlock</string>
    <string name="txt_message_pin">Import PIN to unlock</string>
    <string name="txt_pass_illegal">Connect at least 4 point</string>
    <string name="txt_select_lock_type">Select lock type</string>
    <string name="txt_message_lock">Privacy protected</string>
    <string name="txt_drop_arm">Relax your hands when you are done drawing</string>
    <string name="txt_message_pin_incorrect">PIN code is incorrect</string>
    <string name="txt_message_pin_confirm">Re-import PIN to confirm</string>
    <string name="txt_message_pin_does_not_match">PIN code does not match</string>
    <string name="txt_message_draw_incorrect">The drawing is not correct</string>
    <string name="txt_message_draw_confirm">Redraw the pattern to confirm</string>
    <string name="txt_message_draw_does_not_match">The drawing is not match</string>
    <string name="txt_successful_lock_installation">Successful lock installation</string>
    <string name="txt_lock_off">Lock turn off</string>
    <string name="txt_watch_now">Watch now</string>
    <string name="txt_share">Share now</string>
    <string name="txt_content_rate">Do you love the app?</string>
    <string name="txt_rate_now">Rate now</string>
</resources>