<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_12sdp"
            app:cardUseCompatPadding="true"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/_12sdp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTitle"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:layout_marginBottom="@dimen/_12sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik_regular"
                    android:gravity="center_vertical"
                    android:includeFontPadding="false"
                    android:text="@string/txt_calendar"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_2sdp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/appCompatTextView2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rubik_regular"
                        android:text="@string/txt_year"
                        android:textColor="@color/black4F4F4F"
                        android:textStyle="bold"
                        android:gravity="center"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/appCompatTextView3"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/appCompatTextView3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rubik_regular"
                        android:text="@string/txt_month"
                        android:textColor="@color/black4F4F4F"
                        android:textStyle="bold"
                        android:gravity="center"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/appCompatTextView"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/appCompatTextView2"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/appCompatTextView"
                        android:gravity="center"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rubik_regular"
                        android:text="@string/txt_day"
                        android:textColor="@color/black4F4F4F"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/appCompatTextView3"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.ycuwq.datepicker.date.DatePicker
                    android:id="@+id/datePicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:textGradual="true"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/btnAllow"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_34sdp"
                        android:layout_alignParentEnd="true"
                        android:background="@drawable/ripple_btn_allow"
                        android:fontFamily="@font/rubik_regular"
                        android:gravity="center"
                        android:includeFontPadding="false"
                        android:minWidth="@dimen/_120sdp"
                        android:paddingStart="@dimen/_12sdp"
                        android:paddingEnd="@dimen/_12sdp"
                        android:text="@string/txt_allow"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/btnCancel"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_34sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_toStartOf="@+id/btnAllow"
                        android:background="@drawable/ripple_btn_un_allow"
                        android:fontFamily="@font/rubik_regular"
                        android:gravity="center"
                        android:includeFontPadding="false"
                        android:minWidth="@dimen/_80sdp"
                        android:paddingStart="@dimen/_12sdp"
                        android:paddingEnd="@dimen/_12sdp"
                        android:text="@string/txt_cancel"
                        android:textColor="@color/black4F4F4F"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>

    </FrameLayout>
</layout>