<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.appcompat.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.crop.GalleryActivity">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="0dp"
            app:cardElevation="@dimen/_12sdp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivBack"
                    android:layout_width="@dimen/_28sdp"
                    android:layout_height="@dimen/_28sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:background="?android:selectableItemBackgroundBorderless"
                    android:padding="@dimen/_3sdp"
                    app:srcCompat="@drawable/ic_back"
                    app:tint="@color/black" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:text="@string/txt_diary_love"
                    android:textColor="@color/black"
                    android:fontFamily="@font/rubik_regular"
                    android:textStyle="bold"
                    android:includeFontPadding="false"
                    android:textSize="@dimen/_15sdp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSelectDate"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@drawable/shape_gray_diary"
                android:fontFamily="@font/rubik_regular"
                android:gravity="center"
                android:textSize="@dimen/_12sdp"
                android:hint="@string/txt_date_diary"
                android:includeFontPadding="false"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/tvContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/_44sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:textSize="@dimen/_12sdp"
                android:lines="6"
                android:gravity="left|top"
                android:scrollbars="vertical"
                android:layout_marginTop="@dimen/_12sdp"
                android:lineSpacingExtra="@dimen/_2sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@drawable/shape_gray_diary"
                android:fontFamily="@font/rubik_regular"
                android:hint="@string/txt_hint_content_diary"
                android:includeFontPadding="false"
                android:padding="@dimen/_12sdp"
                android:textColor="@color/black"
                tools:text="NHỮNG BẢN ACOUSTIC COVER HAY NHẤT MỌI THỜI ĐẠI - 60 BÀI HÁT NHẠC TRẺ XƯA 8X 9X HAY NHẤT HIỆN NAY
NHỮNG BẢN NHẠC ACOUSTIC BẤT HỮU HAY NHẤT DÀNH CHO QUÁN CAFE | NGHE ĐI RỒI " />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/rubik_regular"
                android:text="@string/txt_select_photo"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:id="@+id/crSelectImage"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_marginEnd="@dimen/_6sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_140sdp"
                app:cardUseCompatPadding="true"
                app:cardBackgroundColor="@color/purple_200"
                app:cardCornerRadius="@dimen/_12sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivPreview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivPreviewCamera"
                    app:tint="@color/white"
                    android:layout_gravity="center"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    app:srcCompat="@drawable/ic_photo_camera"/>

            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:background="@drawable/ripple_btn_grant_permission"
                android:gravity="center"
                android:fontFamily="@font/rubik_regular"
                android:includeFontPadding="false"
                android:text="@string/txt_save"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>