<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_12sdp"
            app:cardUseCompatPadding="true"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_12sdp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/appCompatTextView"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:fontFamily="@font/ios"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/txt_select_lock_type"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <RelativeLayout
                    android:id="@+id/rlPin"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:layout_marginTop="12dp"
                    android:background="?android:selectableItemBackground">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/appCompatTextView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:fontFamily="@font/ios"
                        android:includeFontPadding="false"
                        android:lineSpacingExtra="6dp"
                        android:text="@string/txt_pass_pin"
                        android:textColor="@color/black"
                        android:textSize="16sp" />


                    <RadioButton
                        android:id="@+id/cbPin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:clickable="false" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlDraw"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:layout_marginTop="6dp"
                    android:background="?android:selectableItemBackground">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:fontFamily="@font/ios"
                        android:includeFontPadding="false"
                        android:lineSpacingExtra="6dp"
                        android:text="@string/txt_pass_draw"
                        android:textColor="@color/black"
                        android:textSize="16sp" />


                    <RadioButton
                        android:clickable="false"
                        android:id="@+id/cbDraw"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true" />

                </RelativeLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>

    </FrameLayout>
</layout>